corkboard_theme.css
/*@font-face {
	font-family: "Gabriola";
	src: url('assets/Gabriola.ttf');
}
*/

* { 
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}


.error:-moz-placeholder {
    color: red;
    opacity: 1;
    font-weight: bold;
}

.error::-webkit-input-placeholder {
    color: red;
    font-weight: bold;
}

.active {
	background: #C9E9FF !important;
}

html, body {
	height: 100%;
}

div#outer, div#content {
	min-height: 100%;
}

body {
	padding: 0;
	background-color: #ADB8A6;
}

div#outer {
	font-family: 'Quicksand', sans-serif;
	margin: 0 auto;
	margin-top: 10px;
	width: 750px;
	background-color: brown;
	background-image: url('assets/fzm-seamless.corkboard.texture-01-[800x800].jpg');
	box-shadow: inset 0px 0px 10px black, 0px 0px 10px;
	border-style: solid;
	border-width: 10px;
	border-radius: 50px;
	border-color: #999;
}



form { margin: 0; line-height: normal;}

h1 {
	background: #FFFFC9;
	text-align: center;
	display: inline-block;
	font-size: 1.5em;
	margin: 0;
	padding: 3px;
	padding-left: 36px;
	padding-right: 36px;
	box-shadow: 2px 2px 2px black;
	line-height: normal;
}

div#content {
	margin: 0 auto;
	width: 600px;
}

div#navigation {
	overflow: visible;
	position: relative;
	height: 100px;
}

#navigation ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	display: inline-block;
	vertical-align: top;
}

ul#family {
	font-size: 0;
}

ul#family li {
	font-size: 15px;
	vertical-align: top;
	margin-left: 5px;
}

#navigation ul li {
	display: inline-block;
	
}

.profile {
	background: #FFFFC9;
	cursor: pointer;
	text-align: center;
}


.profile h3 {
	font-size: 1em;
	margin: 0;
	padding: 0;
	font-weight: normal;
	text-align: center;
	padding-left: 3px;
	padding-right: 3px;
	line-height: normal;

}
.profile img {
	width: 50px;
	height: 50px;
	margin: 4px;
	border: 1px solid black;
	vertical-align: bottom;
}

.profile #checkbox {
	border: none;
}


#boxTodo {
	background: #FFFFC9;
	cursor: pointer;
	text-align: center;
}


#boxTodo h3 {
	font-size: 1em;
	margin: 0;
	padding: 0;
	font-weight: normal;
	text-align: center;
	padding-left: 3px;
	padding-right: 3px;
	line-height: normal;

}
#boxTodo img {
	width: 50px;
	height: 50px;
	margin: 4px;
	border: 1px solid black;
	vertical-align: bottom;
}

#boxTodo #checkbox {
	border: none;
}



#tabs li {
	padding: 4px;
	background: #C9E9FF;
	cursor: pointer;
}

#navigation div {
	
}

.family_button {
	position: absolute;
	top: 0;
	right: 0;
}
.family_button button, .family_button button:focus {
	border-radius: 0px;
	background: #FFFFC9;
}

.family_button button:hover {
	background: #C9E9FF;
}

.family_button .dropdown-menu {
	border-radius: 0px;
}

div.tabs_container {
	vertical-align: bottom;
	position: absolute;
	bottom: 0;
	left: 0;
}

div.family_container {
	/*width: 69%;*/
	text-align: right;
	position: absolute;
	bottom: 0;
	right: 0;
}

.edit {
	font-size: 50%;
	cursor: pointer;
}

/* Task list */
div#tasklist {
	clear: both;
	background-color: white;
	position: relative;
	/*top: -17px; /* Something wrong with the nav div */
	padding-top: 12px;
	padding-left: 15px;
	padding-right: 15px;
	padding-bottom:15px;
	box-shadow: 4px 4px 9px black;
	margin-bottom: 20px;
}

div#manageFamily {
	clear: both;
	background-color: white;
	position: relative;
	/*top: -17px; /* Something wrong with the nav div */
	padding-top: 12px;
	padding-left: 15px;
	padding-right: 15px;
	padding-bottom:15px;
	box-shadow: 4px 4px 9px black;
	margin-bottom: 20px;
}

div.taskLabel {
	word-wrap:break-word;
	margin-right:2px;
	padding-right:2px;
}

img.pin_left {
	width: 31px;
	position:absolute;
	top: -1;
	left: 1;
}


#tasklist h2 {
	display: inline;
	font-size: 1.5em;
}

button#new_task_btn {
	display: inline;
	margin: 0;
	font-style: bold;
	font-size: 1.5em;
	margin-left: .5em;
}

/* Add a new task */
div#item_entry {
	background: gray;
	border: 1px black solid;
	padding: 5px;
	padding-left: 10px;
	padding-right: 10px;
	text-align: center;
	margin-top: 10px;
}

#manage_family {
	background: #FFFFC9;
	position: absolute;
	right: 0;
	top: -1.5em;
}

#item_entry select {
	vertical-align: middle;
	width: auto;
}

#item_entry input[type="text"] {
	width: 65%;
}

#containsImage {
	margin-bottom: 20px;
	margin-top: 15px;
}

#bottom {
	text-align: center;
}

#titleButton {
	top: 10px;
	cursor: default;
}

#family li h3 {
	pointer-events: none;
}

.selectionPic {
	cursor: pointer;
}

#managePic {
	height:50px;
	width:50px;
}

#error {
	color:red;
}

